# deethon

./: .editorconfig  .gitattributes  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  tox.ini
.github/workflows/: build.yml  main.yml  publish.yml  pythonpackage.yml
assets/css/: custom.css
changelog/: index.html
code_of_conduct/: index.html
deethon/: __init__.py  consts.py  deezer.py  errors.py  exceptions.py  session.py  tag.py  types.py  utils.py
deethon/types/: __init__.py  album.py  track.py
deethon/utils/: constants.py  crypt.py  helper.py  tag.py
docs/: license.md
docs/assets/css/: custom.css
docs/reference/: consts.md  errors.md  session.md  types.md  utils.md
license/: index.html
reference/consts/: index.html
reference/errors/: index.html
reference/session/: index.html
reference/types/: index.html
reference/utils/: index.html
search/: search_index.json
tests/: test_download.py  test_session.py  test_types.py
